Mise en place du header

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,6 +9,8 @@ $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
 
+$base-font-size: 16px;
+
 $breakpoints: (
     'small': 320px,
     'medium': 768px,
