--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,7 +1,9 @@
 body {
     font-family: $text-font;
+    font-size: calc(($base-font-size / 16px) * 100%);
+
 }
 
-h3.special-title {
+.heading-special-title {
     font-family: $title-and-logo-font;
 }
