--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,11 @@
 .header {
     display: flex;
     justify-content: center;
+    position: relative;
+    z-index: 1000;
     min-height: 63px;
+
+    box-shadow: 0 0 5px rgba(0,0,0, .3);
 
     &__logo {
         width: 165px;
