Mise en place des cartes ' Restaurants '
Modification du componsant ' cards '

Utilisation des composants ' badges ' et ' hearts '

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,6 +4,7 @@ $text-font: 'Roboto', sans-serif;
 
 $color-black: #000;
 $color-white: #FFF;
+$color-gray: #F6F6F6;
 
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
