--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,8 @@
 
 @import
     'components/buttons',
-    'components/cards';
+    'components/cards',
+    'components/badges',
+    'components/hearts';
 
 @import 'pages/homepage';
