--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,476 +1,1 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-/* Document
-   ========================================================================== */
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-/**
- * Remove the margin in all browsers.
- */
-body {
-  margin: 0;
-}
-
-/**
- * Render the `main` element consistently in IE.
- */
-main {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-/**
- * Remove the gray background on active links in IE 10.
- */
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-/**
- * Remove the border on images inside links in IE 10.
- */
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-button,
-input { /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-button,
-select { /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-button,
-[type=button],
-[type=reset],
-[type=submit] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-[type=checkbox],
-[type=radio] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-[type=search] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-/**
- * Add the correct display in IE 10+.
- */
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-[hidden] {
-  display: none;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-main {
-  position: relative;
-  z-index: 900;
-  min-height: 100px;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  font-size: 100%;
-}
-
-.heading-special-title {
-  font-family: "Shrikhand", cursive;
-}
-
-.container {
-  margin: 0 auto;
-}
-
-.header {
-  display: flex;
-  justify-content: center;
-  position: relative;
-  z-index: 1000;
-  min-height: 63px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-}
-.header__logo {
-  width: 165px;
-}
-
-.btn {
-  height: 50px;
-  padding: 0.9375rem 1.25rem;
-  font-size: 1rem;
-  font-weight: 500;
-  border-radius: 25px;
-  text-decoration: none;
-  line-height: 50px;
-}
-.btn--classic {
-  background-image: linear-gradient(to top, #9356DC, #FF79DA);
-  box-shadow: 0 5px 5px 2px rgba(0, 0, 0, 0.1);
-  color: #FFF;
-  transition: box-shadow 0.5s;
-}
-.btn--classic:hover {
-  box-shadow: 0 5px 5px 2px rgba(0, 0, 0, 0.3);
-}
-
-.card {
-  border-radius: 16px;
-}
-
-.card-informations {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  min-height: 75px;
-  border-radius: 16px;
-  box-shadow: 0 5px 15px 2px rgba(0, 0, 0, 0.1);
-}
-.card-informations__icon {
-  margin-right: 25px;
-  opacity: 0.5;
-  font-size: 1.125rem;
-}
-.card-informations__icon--purple {
-  opacity: 1;
-  color: #9356DC;
-}
-.card-informations__text {
-  color: #000;
-  font-weight: 500;
-}
-
-.card__chip {
-  width: 25px;
-  height: 25px;
-  margin: 0 22px 0 -12px;
-  border-radius: 50%;
-}
-
-.card__chip--purple {
-  background: #9356DC;
-  color: #FFF;
-  font-size: 0.875rem;
-  text-align: center;
-  line-height: 27px;
-}
-
-.card--gray {
-  background: #F6F6F6;
-}
-
-.card--pink {
-  background: #F5EDFF;
-}
-
-.card--white {
-  background: #FFF;
-}
-
-.localization {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 50px;
-  background: #EAEAEA;
-}
-.localization__position {
-  margin: 0;
-  font-size: 1rem;
-  font-weight: 500;
-  opacity: 0.7;
-}
-.localization__position > i {
-  margin-right: 18px;
-}
-
-.explore-restaurants {
-  min-height: 287px;
-  padding: 2.6875rem 0 3.4375rem 0;
-  background: #F6F6F6;
-  text-align: center;
-}
-.explore-restaurants > h1 {
-  margin: 0 45px;
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-.explore-restaurants > p {
-  margin-bottom: 35px;
-  font-size: 1.125rem;
-  opacity: 0.7;
-}
-
-.process {
-  margin-top: 50px;
-}
-.process > h2 {
-  margin: 0 0 32px 18px;
-}
-.process__steps {
-  margin: 0 20px 10px 30px;
-  list-style: none;
-}
-.process__steps > li {
-  margin-bottom: 20px;
-}
-
-/*# sourceMappingURL=style.css.map */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:rgba(0,0,0,0)}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-0.25em}sup{top:-0.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}ul{margin:0;padding:0}html{box-sizing:border-box;scroll-behavior:smooth}*,*::before,*::after{box-sizing:inherit}main{position:relative;z-index:900;min-height:100px}a{text-decoration:none}body{font-family:"Roboto",sans-serif;font-size:100%}.heading-special-title{font-family:"Shrikhand",cursive}.container{margin:0 auto}.header{display:flex;justify-content:center;position:relative;z-index:1000;min-height:63px;box-shadow:0 0 5px rgba(0,0,0,.3)}.header__logo{width:165px}.btn{height:50px;padding:.9375rem 1.25rem;font-size:1rem;font-weight:500;border-radius:25px;text-decoration:none;line-height:50px}.btn--classic{background-image:linear-gradient(to top, #9356DC, #FF79DA);box-shadow:0 5px 5px 2px rgba(0,0,0,.1);color:#fff;transition:box-shadow .5s}.btn--classic:hover{box-shadow:0 5px 5px 2px rgba(0,0,0,.3)}.card{display:flex;flex-direction:column;position:relative;min-width:335px;max-height:250px;margin:15px 20px;border-radius:16px;box-shadow:0 5px 15px 2px rgba(0,0,0,.1);color:#000}.card:hover>.card__image{opacity:.5}.card__image{width:100%;height:175px;border-radius:16px 16px 0 0;object-fit:cover;object-position:100% 61%;opacity:1;transition:opacity .5s}.card__details{display:flex;justify-content:space-between;height:75px;padding:15px 0 20px 15px}.card__descriptions{flex-basis:100%}.card__heading{margin:0 0 5px 0;font-size:1.125rem}.card__information{margin:0;font-weight:300}.card__heart{align-self:flex-start;width:38px;margin-right:25px;stroke:#000;fill:#fff;cursor:pointer;transition:fill .5s,stroke .5s}.card-informations{display:flex;justify-content:flex-start;align-items:center;min-height:75px;border-radius:16px;box-shadow:0 5px 15px 2px rgba(0,0,0,.1)}.card-informations__icon{margin-right:25px;opacity:.5;font-size:1.125rem}.card-informations__icon--purple{opacity:1;color:#9356dc}.card-informations__text{color:#000;font-weight:500}.card__chip{width:25px;height:25px;margin:0 22px 0 -12px;border-radius:50%}.card__chip--purple{background:#9356dc;color:#fff;font-size:.875rem;text-align:center;line-height:27px}.card--gray{background:#f6f6f6}.card--pink{background:#f5edff}.card--white{background:#fff}.badge{position:absolute;width:80px;height:30px;border:thin solid #85dcc7;border-radius:2px;box-shadow:0 2px 2px 2px rgba(0,0,0,.3);font-size:14px;font-weight:500;line-height:30px;text-align:center}.badge--green{background:#99e2d0;color:#278870}.badge--top-right{top:12px;right:12px}.heart{margin:0 20px;font-size:1.375rem;color:#fff;text-shadow:0px 2px 0px #000,2px 0px 0px #000,0 -2px 0px #000,-2px 0 0 #000;transition:all .5s}.heart:hover{font-size:1.5rem;margin-top:-2px;color:rgba(0,0,0,0);background-image:linear-gradient(-120deg, #9356DC, #FF79DA);background-clip:text;text-fill-color:rgba(0,0,0,0);text-shadow:none}.localization{display:flex;justify-content:center;align-items:center;min-height:50px;background:#eaeaea}.localization__position{margin:0;font-size:1rem;font-weight:500;opacity:.7}.localization__position>i{margin-right:18px}.explore-restaurants{min-height:287px;padding:2.6875rem 0 3.4375rem 0;background:#f6f6f6;text-align:center}.explore-restaurants>h1{margin:0 45px;font-size:1.5rem;font-weight:700}.explore-restaurants>p{margin-bottom:35px;font-size:1.125rem;opacity:.7}.process{margin-top:50px}.process>h2{margin:0 0 32px 18px}.process__steps{margin:0 20px 10px 30px;list-style:none}.process__steps>li{margin-bottom:20px}.restaurants{margin-top:68px;padding:60px 0 65px 0;background:#f6f6f6}.restaurants>h2{margin:0 0 32px 18px}/*# sourceMappingURL=style.css.map */
