--- a/sass/components/cards.scss
+++ b/sass/components/cards.scss
@@ -1,6 +1,60 @@
 .card {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    min-width: 335px;
+    max-height: 250px;
+    margin: 15px 20px;
     border-radius: 16px;
+    box-shadow: 0 5px 15px 2px rgba(0, 0, 0, .1);
+    color: $color-black;
+
+    &:hover > &__image {
+        opacity: .5;
+    }
+
+    &__image {
+        width: 100%;
+        height: 175px;
+        border-radius: 16px 16px 0 0;
+        object-fit: cover;
+        object-position: 100% 61%;
+        opacity: 1;
+        transition: opacity .5s;
+    }
+
+    &__details {
+        display: flex;
+        justify-content: space-between;
+        height: 75px;
+        padding: 15px 0 20px 15px;
+    }
+
+    &__descriptions {
+        flex-basis: 100%;
+    }
+
+    &__heading {
+        margin: 0 0 5px 0;
+        font-size: rem(18px);
+    }
+
+    &__information {
+        margin: 0;
+        font-weight: 300;
+    }
+
+    &__heart {
+        align-self: flex-start;
+        width: 38px;
+        margin-right: 25px;
+        stroke: black;
+        fill: white;
+        cursor: pointer;
+        transition: fill .5s, stroke .5s;
+    }
 }
+
 
 .card-informations {
     display: flex;
