--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -20,10 +20,11 @@
     }
 }
 
+
 .explore-restaurants {
     min-height: 287px;
     padding: rem(43px) 0 rem(55px) 0;
-    background: #F6F6F6;
+    background: $color-gray;
     text-align: center;
 
     & > h1 {
@@ -39,6 +40,7 @@
     }
 }
 
+
 .process {
     margin-top: 50px;
 
@@ -53,5 +55,16 @@
         & > li {
             margin-bottom: 20px;
         }
+    }
+}
+
+
+.restaurants {
+    margin-top: 68px;
+    padding: 60px 0 65px 0;
+    background: $color-gray;
+
+    & > h2 {
+        margin: 0 0 32px 18px;
     }
 }
