fix visuels et config
Component ' badges ' border et box-shadow

Component ' buttons ' modification du degrade

Component ' hearts ' ajout d'une hauteur sur l'icone

Pages ' homepage ' modification margin et padding du bloc ' explore-restaurants '

Correctif sur la commande pour lancer autoprefixer

--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -8,7 +8,7 @@
     line-height: 50px;
 
     &--classic {
-        background-image: linear-gradient(to top, $color-primary, $color-secondary);
+        background-image: linear-gradient(360deg, $color-primary, $color-secondary);
         box-shadow: 0 5px 5px 2px rgba(0, 0, 0, .1);
         color: $color-white;
         transition: box-shadow .5s;
