--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import
     'abstracts/variables',
-    'abstracts/placeholders',
-    'abstracts/functions';
+    'abstracts/functions',
+    'abstracts/placeholders';
 
 @import 'vendors/normalize';
 
