Ajout du mail sur le lien ' contact ' dans le footer

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,10 @@ html {
     box-sizing: inherit;
 }
 
+body {
+    background: $color-gray;
+}
+
 main {
     position: relative;
     z-index: 900;
