--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -2,10 +2,11 @@
     height: 50px;
     padding: rem(15px) rem(20px);
     font-size: rem(16px);
-    font-weight: 500;;
+    font-weight: 500;
+    border: none;
     border-radius: 25px;
     text-decoration: none;
-    line-height: 50px;
+    cursor: pointer;
 
     &--classic {
         background-image: linear-gradient(360deg, $color-primary, $color-secondary);
@@ -16,5 +17,10 @@
         &:hover {
             box-shadow: 0 5px 5px 2px rgba(0, 0, 0, .3);
         }
+    }
+
+    &--p50 {
+        padding-right: rem(50px);
+        padding-left: rem(50px);
     }
 }
