--- a/sass/components/cards.scss
+++ b/sass/components/cards.scss
@@ -48,13 +48,9 @@
         align-self: flex-start;
         width: 38px;
         margin-right: 25px;
-        stroke: black;
-        fill: white;
         cursor: pointer;
-        transition: fill .5s, stroke .5s;
     }
 }
-
 
 .card-informations {
     display: flex;
@@ -106,4 +102,84 @@
 
 .card--white {
     background: $color-white;
+}
+
+
+.card-check {
+
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+
+    position: relative;
+
+    height: 65px;
+    margin: 15px 20px;
+    overflow: hidden;
+
+    border-radius: 16px;
+    box-shadow: 0 5px 15px 2px rgba(0, 0, 0, .1);
+
+    &__descriptions {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        flex: 1 1;
+        margin: 12px 0 12px 12px;
+
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+
+        & > h4 {
+            font-size: rem(16px);
+            @extend %text-ellipsis;
+        }
+
+        & > p {
+            font-size: rem(14px);
+            font-weight: 300;
+            @extend %text-ellipsis;
+        }
+    }
+
+    &__price {
+        align-self: flex-end;
+        margin: 0 15px 12px 5px;
+        font-size: 14px;
+        font-weight: 500;
+    }
+
+    &__checked {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 0px;
+        overflow: hidden;
+        background: $color-tertiary;
+        cursor: pointer;
+        transition: .5s;
+
+        & > i {
+            color: $color-white;
+            font-size: 20px;
+            transition: .5s;
+        }
+    }
+
+    &:hover > &__checked {
+        width: 57px;
+
+        & > i {
+            transform: rotate(360deg);
+        }
+    }
+}
+
+.card--animate {
+    animation-name: fade-in;
+    animation-duration: 500ms;
+    animation-fill-mode: forwards;
+    opacity: 0;
 }
