--- a/sass/components/hearts.scss
+++ b/sass/components/hearts.scss
@@ -8,15 +8,15 @@
         2px 0px 0px $color-black,
         0 -2px 0px $color-black,
         -2px 0 0 $color-black;
+    cursor: pointer;
     transition: all .5s;
 
     &:hover {
-        font-size: rem(24px);
-        margin-top: -2px;
+        font-size: rem(22px);
         color: transparent;
         background-image: linear-gradient(-120deg, $color-primary, $color-secondary);
         background-clip: text;
-        text-fill-color: transparent;
+        // -webkit-text-fill-color: transparent;
         text-shadow: none;
     }
 }
