--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -9,13 +9,25 @@
     cursor: pointer;
 
     &--classic {
+        position: relative;
         background-image: linear-gradient(360deg, $color-primary, $color-secondary);
         box-shadow: 0 5px 5px 2px rgba(0, 0, 0, .1);
         color: $color-white;
-        transition: box-shadow .5s;
+        transition: box-shadow 500ms;
 
         &:hover {
             box-shadow: 0 5px 5px 2px rgba(0, 0, 0, .3);
+        }
+
+        &:hover::after {
+            content: '';
+            position: absolute;
+            border-radius: 25px;
+            background: rgba($color-white, .1);
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
         }
     }
 
