Mise en place du responsive sur la homepage pour les versions desktop et tablette
Ajout d'un mixin ' responsive '

Modification des valeurs Breakpoints

Modification du helper ' container '

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -10,3 +10,17 @@
         $delay: $delay + $incrementTo;
     }
 }
+
+
+@mixin responsive($breakpointName, $breakpoints: $breakpoints) {
+    $breakpoint: map-get($breakpoints, $breakpointName);
+
+    @if $breakpoint == null {
+        @content;
+    } @else {
+
+        @media screen and (min-width: #{$breakpoint}) {
+            @content;
+        }
+    }
+}
