--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,7 +13,8 @@ $color-tertiary: #99E2D0;
 $base-font-size: 16px;
 
 $breakpoints: (
-    'small': 320px,
+    'small': 375px,
     'medium': 768px,
-    'large': 1024px,
+    'large': 992px,
+    'max-size': 1200px
 )
