--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -1,23 +1,55 @@
 .restaurant {
 
+    &__image {
+
+        @include responsive('large') {
+            height: 460px;
+        }
+
+        @include responsive('medium') {
+            height: 360px;
+        }
+
+        position: relative;
+        width: 100%;
+        height: 260px;
+        object-fit: cover;
+    }
+
     &__menu {
+
+        @include responsive('large') {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+
+            & > h2 {
+                grid-row: 1 / 1;
+                grid-column: 1 / 4;
+            }
+
+            &__list {
+                overflow: hidden;
+            }
+
+            & > button {
+                grid-column: 2 / 3;
+            }
+        }
 
         padding-bottom: 55px;
         background: $color-white;
 
-        &__image {
-            position: relative;
-            width: 100%;
-            height: 260px;
-            object-fit: cover;
-        }
-
         & > h2 {
+            @include responsive('large') {
+                margin-top: -85px;
+            }
             display: flex;
             align-items: center;
             justify-content: space-between;
+
             position: relative;
             z-index: 200;
+
             border-radius: 45px 45px 0 0;
             background: $color-white;
 
@@ -34,6 +66,7 @@
         }
 
         &__list {
+
             margin-bottom: 35px;
 
             &:last-of-type {
