fix code, positionnement, balise, fichier normalize, taille image
Changement de balise sur la page des menu ( form est remplace par div ), decalage du titre sur la page des menu, repositionnement du footer sur les pages des menus, fichier normalize remplace par un plus recent causant moins de warning sur le validator css, taille d'image plus grande selon la dimension de la fenetre

--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -35,7 +35,7 @@
 
     & > p {
         margin: 15px auto 35px auto;
-        padding: auto 10px auto 10px;
+        padding: 0 10px 0 10px;
         font-size: rem(18px);
         opacity: .7;
     }
