--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -1,14 +1,14 @@
 .restaurant {
 
     &__image {
+        @include responsive('medium') {
+            height: 360px;
+        }
 
         @include responsive('large') {
             height: 460px;
         }
 
-        @include responsive('medium') {
-            height: 360px;
-        }
 
         position: relative;
         width: 100%;
@@ -41,7 +41,7 @@
 
         & > h2 {
             @include responsive('large') {
-                margin-top: -85px;
+                margin-top: -70px;
             }
             display: flex;
             align-items: center;
@@ -68,6 +68,7 @@
         &__list {
 
             margin-bottom: 35px;
+            cursor: pointer;
 
             &:last-of-type {
                 margin-bottom: 50px;
