Modification de l'icone coeur
L'icone coeur est affiche en svg et non plus via l'icone de la librairie font awesome

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -10,3 +10,8 @@ ul {
     margin: 0;
     padding: 0;
 }
+
+/* Surcharge de la declaration dans le fichier normalize */
+svg:not(:root) {
+    overflow: visible;
+}
