fix marge du component ' heart '

--- a/sass/components/_hearts.scss
+++ b/sass/components/_hearts.scss
@@ -2,7 +2,7 @@
     $parent: &;
     $transitionMicroSecond: 750ms;
 
-    margin: 0 20px;
+    margin: 0 0 0 20px;
     height: 38px;
 
     stroke-width: 10;
