Mise en place du composant anime ' spinner ' sur la homepage

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,7 +21,8 @@
     'components/buttons',
     'components/cards',
     'components/badges',
-    'components/hearts';
+    'components/hearts',
+    'components/spinner';
 
 @import
     'pages/homepage',
