--- a/sass/components/_animations.scss
+++ b/sass/components/_animations.scss
@@ -9,3 +9,45 @@
         opacity: 1;
     }
 }
+
+
+@keyframes spinner-fade-in {
+    0% {
+        background: rgba($color-black, 0);
+    }
+    100% {
+        background: rgba($color-black, .7);
+        opacity: 1;
+    }
+}
+
+@keyframes spinner-fade-out {
+    0% {
+        background: rgba($color-black, .7);
+    }
+    100% {
+        height: 0;
+        background: rgba($color-black, 0);
+        opacity:0;
+    }
+}
+
+@keyframes spinner-circle1 {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes spinner-circle3 {
+    0% {
+        transform: scale(.50);
+    }
+
+    100% {
+        transform: scale(1.0);
+    }
+}
