refactorisation, creation de mixin, fix de fonction
Creation du mixin ' position '

Fix de la fonction ' rem '

--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -178,8 +178,6 @@
 }
 
 .card--animate {
-    animation-name: fade-in;
-    animation-duration: 500ms;
-    animation-fill-mode: forwards;
+    animation: fade-in 500ms forwards;
     opacity: 0;
 }
