--- a/sass/components/_spinner.scss
+++ b/sass/components/_spinner.scss
@@ -2,12 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
+
+    @include position(fixed, 0, 0, 0, 0);
+
     z-index: 5000;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
 
     background: $color-black;
 
