--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,9 +6,8 @@
     box-shadow: 0 0 5px rgba(0,0,0, .3);
 
     &__logo {
-        position: absolute;
-        top: 50%;
-        left: 50%;
+        @include position(absolute, 50%, null, null, 50%);
+
         transform: translate(-50%, -50%);
         display: block;
         width: 165px;
@@ -16,9 +15,8 @@
     }
 
     &__back {
-        position: absolute;
-        top: 50%;
-        left: 30px;
+        @include position(absolute, 50%, null, null, 30px);
+
         transform: translateY(-50%);
         color: $color-black;
         font-size: rem(22px);
