--- a/sass/abstracts/_functions.scss
+++ b/sass/abstracts/_functions.scss
@@ -1,4 +1,6 @@
+@use "sass:math";
+
 /// Conversion de pixel en rem
 @function rem($value) {
-    @return $value / $base-font-size * 1rem;
+    @return math.div($value, $base-font-size) * 1rem;
 }
