--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -21,13 +21,9 @@
 
         &:hover::after {
             content: '';
-            position: absolute;
+            @include position(absolute, 0, 0, 0, 0);
             border-radius: 25px;
             background: rgba($color-white, .1);
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
         }
     }
 
