--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    min-width: 335px;
-    max-height: 250px;
+    min-height: 250px;
     margin: 15px 20px;
     border-radius: 16px;
     box-shadow: 0 5px 15px 2px rgba(0, 0, 0, .1);
@@ -26,7 +25,7 @@
     &__details {
         display: flex;
         justify-content: space-between;
-        height: 75px;
+        min-height: 75px;
         padding: 15px 0 20px 15px;
     }
 
