--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -26,7 +26,7 @@
         display: flex;
         justify-content: space-between;
         min-height: 75px;
-        padding: 15px 0 20px 15px;
+        padding: 15px 15px 20px 15px;
     }
 
     &__descriptions {
